
  * [cmdline]: Virtual packages which have an already
               installed provider are only skipped when the
               requested action is to install them.

  * [cmdline]: search exit with status 1 if it found no
               matches (Closes: #497299)

  * [cmdline]: why exits with status 1 if it found no
               reasons given the particular arguments

- Internal changes:

  * Unified the way packages are selected from command line
    arguments.

  * Use apt's CommandLine parser

    Previously aptitude was using it's own command line
    parser implemented on top of getopt.  Replacing this
    with the standard apt class means there are no longer
    subtle quirks with our parser (such as "-qq" not
    being valid when it is fine for other apt programs).

  * download_install_manager.cc:
    - repeat if package manager result is DoAgain;
    - report all download errors not just the first;

- Cosmetic and UI bugs:

  * [cmdline]: Use arch-qualified names for virtual packages in
               more places as this is what apt-utils do.

  * [cmdline]: Most errors are now displayed at the end of a command's
               output which makes them easier to spot when there is
               lots of output. (Closes: #430392)

- Documentation:

  * [doc]: add section on exit status to the man page

[5/11/2012]
Version 0.6.8                               "Never need a reason,
                                             never need a rhyme"

This version of aptitude requires apt 0.9 and will not build against
earlier releases.

- Crashes and serious errors:

  * [all]: Fix build with g++ 4.7
           Thanks Adrian Lang for the patch (Closes: #672335)

- New features:

  * [all]: Support really big files in the download system

           This follows recent changes in apt which added support for
           files greater than several gigabytes in size -- using the
           'unsigned long long' type to store the file size.
